fix(view): uneven personal class card height
[Fixes|Delivers #104390830]

--- a/client/assets/stylesheets/blocks/_personal-class-card.scss
+++ b/client/assets/stylesheets/blocks/_personal-class-card.scss
@@ -6,6 +6,10 @@
   }
 }
 
+.personal-class-card__title {
+  min-height: 2.6em;
+}
+
 .personal-class-card__image-content {
   position: relative;
   width: 100%;
